<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        app:srcCompat="@drawable/plotpertylogo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview1"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />


    <TextView
        android:id="@+id/areasize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/Area"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.0" />



    <TextView
        android:id="@+id/approxcost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cost"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toEndOf="@+id/areasize"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/contype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Type"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toEndOf="@+id/approxcost"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.036" />

    <EditText
        android:id="@+id/areafield1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="-7dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/areasize"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/costfield1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/areafield1"
        app:layout_constraintTop_toBottomOf="@+id/approxcost"
        app:layout_constraintVertical_bias="0.032" />

    <Spinner
        android:id="@+id/typefield1"
        android:layout_width="100dp"
        android:layout_height="33dp"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toEndOf="@+id/costfield1"
        app:layout_constraintTop_toBottomOf="@+id/contype"
        app:layout_constraintVertical_bias="0.048" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calculatebutton"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="16dp"
        android:layout_x="164dp"
        android:layout_y="784dp"
        android:background="@drawable/custom_button"
        android:enabled="false"
        android:text="@string/calculator"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"

        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="40dp"

        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:background="@color/teal_700">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:text="@string/col1"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/border"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:text="@string/row1"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:text="@string/row2"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/cement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:textSize="14sp"
                android:background="@drawable/border"
                android:text=""
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:text="@string/row3"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/sand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:textSize="14sp"
                android:background="@drawable/border"
                android:text=""
                android:textStyle="bold"
                android:textColor="@color/teal_700"


                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:text="@string/row4"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/aggregate"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:textSize="14sp"
                android:background="@drawable/border"
                android:text=""
                android:textStyle="bold"
                android:textColor="@color/teal_700"


                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:text="@string/row5"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/steel"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:textSize="14sp"
                android:background="@drawable/border"
                android:text=""
                android:textStyle="bold"
                android:textColor="@color/teal_700"

                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:text="@string/row6"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/fittings"
                android:layout_width="0dp"
                android:layout_height="79.5dp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:textSize="14sp"
                android:background="@drawable/border"
                android:text=""
                android:textStyle="bold"
                android:textColor="@color/teal_700"


                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:text="@string/row7"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/finishers"

                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:textSize="14sp"
                android:background="@drawable/border"
                android:text=""
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/teal_700"


                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:text="@string/row8"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/total"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:textSize="14sp"
                android:background="@drawable/border"
                android:text=""
                android:textStyle="bold"
                android:textColor="@color/teal_700"


                />

        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>